# ProjectMTest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  main.cpp  projectmpresetmodel.cpp  projectmpresetmodel.h  projectmvisualization.cpp  projectmvisualization.h  visualizationcontainer.cpp  visualizationcontainer.h  visualizationoglwidget.cpp  visualizationoglwidget.h  visualizationopenglwidget.cpp  visualizationopenglwidget.h  visualizationselectordialog.cpp  visualizationselectordialog.h  visualizationselectordialog.ui
